--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-appearance": "^0.3.4",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
