--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.1",
     "react-native-appearance": "^0.3.4",
+    "react-native-dotenv": "^3.3.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
