--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native": "0.68.1",
     "react-native-appearance": "^0.3.4",
     "react-native-dotenv": "^3.3.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "webpack-dev-server": "~3.11.0",
+    "@expo/webpack-config": "~0.16.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
