--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.68.2",
     "react-native-appearance": "^0.3.4",
     "react-native-dotenv": "^3.3.1",
+    "react-native-safe-area-context": "^4.2.5",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
