--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "react-native-appearance": "^0.3.4",
     "react-native-dotenv": "^3.3.1",
     "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "^3.13.1",
+    "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-native-web-webview": "^1.0.2",
-    "react-native-webview": "^11.18.2",
+    "react-native-webview": "11.18.1",
     "react-native-youtube-iframe": "^2.2.2"
   },
   "devDependencies": {
