--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Lift Me Up",
     "slug": "lift-me-up",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon1.png",
     "userInterfaceStyle": "automatic",
@@ -19,7 +19,8 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.achanthavisith.liftmeup"
+      "bundleIdentifier": "com.achanthavisith.liftmeup",
+      "buildNumber": "2"
     },
     "android": {
       "adaptiveIcon": {
