--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.68.2",
     "react-native-appearance": "^0.3.4",
     "react-native-dotenv": "^3.3.1",
+    "react-native-option-menu": "^1.1.3",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
