--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-web": "0.17.7",
     "react-native-web-webview": "^1.0.2",
     "react-native-webview": "11.18.1",
-    "react-native-youtube-iframe": "^2.2.2"
+    "react-native-youtube-iframe": "^2.2.2",
+    "expo-updates": "~0.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
