--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-native-async-storage/async-storage": "^1.17.5",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@rneui/themed": "^4.0.0-rc.6",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-font": "^10.1.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -28,8 +30,7 @@
     "react-native-web": "0.17.7",
     "react-native-web-webview": "^1.0.2",
     "react-native-webview": "11.18.1",
-    "react-native-youtube-iframe": "^2.2.2",
-    "expo-updates": "~0.13.4"
+    "react-native-youtube-iframe": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
