--- a/package.json
+++ b/package.json
@@ -10,30 +10,30 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.5",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@rneui/themed": "^4.0.0-rc.6",
     "axios": "^0.27.2",
-    "expo": "~45.0.0",
-    "expo-font": "^10.1.0",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "expo": "^47.0.0",
+    "expo-font": "~11.0.1",
+    "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "^0.70.8",
     "react-native-appearance": "^0.3.4",
     "react-native-dotenv": "^3.3.1",
     "react-native-option-menu": "^1.1.3",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.7",
     "react-native-web-webview": "^1.0.2",
-    "react-native-webview": "11.18.1",
+    "react-native-webview": "11.23.1",
     "react-native-youtube-iframe": "^2.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
   "private": true
 }
